[package]
name = "parity-secretstore-ethereum-service"
version = "1.0.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ethabi = "11.0"
ethabi-contract = "11.0"
ethabi-derive = "11.0"
ethereum-types = "0.8"
futures = "0.3"
keccak-hash = "0.4"
lazy_static = "1.4"
log = "0.4"
parity-bytes = "0.1"
parity-crypto = { version = "0.4", features = ["publickey"] }
parity-secretstore-blockchain-service = { git = "https://github.com/svyatonik/secretstore-blockchain-service.git" }
parity-secretstore-primitives = { git = "https://github.com/svyatonik/secretstore-primitives.git" }
